# leptos_tic-tac-toe

./: Cargo.toml  index.html  leptos.toml
src/: main.rs
src/components/: icons.rs  mod.rs
src/components/app/: app.module.css  app.rs
src/components/headings/: headings.module.css  headings.rs  mod.rs
src/components/layout/: layout.module.css  layout.rs
src/views/: mod.rs
src/views/new_menu/: new_menu.module.css  new_menu.rs
styles/stylance/: _index.scss  app.module-ee52.css  headings.module-22a3.css  layout.module-cb17.css  new_menu.module-1655.css
