[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.stylance]
output_file = "./styles/bundled.css"
output_dir = "./styles/"
folders = ["./src/"]
extensions = [".module.css"]
hash_len = 4
class_name_pattern = "[name]-[hash]"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
stylance = "0.3.0"
